# fan-tickets

./: .dockerignore  .gitignore  DockerfileApi  README.md  TODO.md  api_gemini.py  api_palm.py  config.py  database-test.sqlite3-journal  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  example.py  package-lock.json  package.json  pix_order_request.json  pix_order_response.json  project.env  pyproject.toml  split_order_request.json  split_order_response.json  start_api.sh  start_web.sh  start_worker.sh  tailwind.config.js  test.html  up_db.sh  version.sh  webhook_response.json  webpack.config.js  wsgi.py
.github/workflows/: build_deploy.yaml  python-app.yml  test.yaml
api/: oauth2.py
api/routes/: __init__.py  events.py  user.py
app/: __init__.py  scheduled_tasks.py
app/commands/: __init__.py
app/controllers/: __init__.py  bard.py  chat.py  chat_auth.py  chat_bard_translation.py  chat_buy.py  chat_sell.py  chat_send_message.py  check_user_room_id.py  image_upload.py  jinja_globals.py  mail.py  payments.py  utils.py
app/forms/: __init__.py  auth.py  category.py  chat.py  dispute.py  event.py  location.py  orders.py  settings.py  ticket.py  translation.py  user.py
app/models/: __init__.py  category.py  dispute.py  event.py  global_fee_settings.py  location.py  message.py  notification.py  notifications_config.py  payment.py  picture.py  rate.py  review.py  room.py  ticket.py  translation.py  user.py  user_notification.py  users_events.py  users_reviews.py  users_tickets.py  utils.py
app/schema/: __init__.py  bard_response.py  chat_auth.py  chat_buy.py  chat_sell.py  error.py  event.py  notification.py  pagarme.py  room.py  ticket.py  user.py
app/schemas/: __init__.py  event.py
app/templates/: _scroll.html  _scrolling.html  admin.html  base.html  display_response.html  error.html  error_500.html  flash_message.html  header.html  help.html  index.html  menu.html  sidebar.html  user_header.html
migrations/: env.py
src/: admin.ts  base.ts  chat.ts  chat_button_open.ts  dispute.ts  event.ts  home.ts  notification.ts  profile.ts  social_media.ts  styles.css  user.ts  user_header_notifications.ts  utils.ts
test_api/: conftest.py  test_auth.py  test_data.json  test_data.py  test_events.py  test_users.py  utils.py
test_flask/: conftest.py  test_admin.py  test_auth.py  test_chat_buy.py  test_chat_sell.py  test_chat_users.py  test_database.py  test_events.py  test_notification.py  test_payments.py  test_static_pages.py  test_tickets.py  test_users.py  test_users_chat.py  utils.py
tests/: test_database.py  test_events.py  test_users.py
(+422 files in other folders)
