[tool.poetry]
name = "flask.app"
version = "0.1.57"
description = ""
authors = ["denys <denysburimov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.3"
flask-migrate = "^4.0.4"
flask-wtf = "^1.1.1"
flask-mail = "^0.9.1"
flask-login = "^0.6.2"
python-dotenv = "^1.0.0"
click = "^8.1.3"
email-validator = "^1.3.1"
psycopg2-binary = "^2.9.5"
alchemical = "^0.7.1"
pytz = "^2023.3.post1"
requests = "^2.31.0"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
fastapi = "^0.104.1"
python-jose = "^3.3.0"
python-multipart = "^0.0.6"
httpx = "^0.25.1"
uvicorn = "^0.24.0.post1"
bardapi = "^0.1.38"
pillow = "^10.1.0"
twilio = "^8.10.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.1"
faker = "^18.3.1"
mypy = "^1.7.1"
ruff = "^0.1.6"
types-pytz = "^2023.3.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ["pydantic.mypy"]
files = ["app/**/*.py", "api/**/*.py", "test_api/**/*.py", "test_flask/**/*.py"]
ignore_missing_imports = true
check_untyped_defs = true


[tool.ruff]
# Set the maximum line length to 120.
line-length = 120
extend-include = ["*.ipynb"]

exclude = [
    ".git",
    ".git-rewrite",
    ".mypy_cache",
    ".pytype",
    ".ruff_cache",
    ".venv",
    "__pypackages__",
    "build",
    "dist",
    "node_modules",
]
# Assume Python 3.12
target-version = "py312"


[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"


[tool.pytest.ini_options]
filterwarnings = [
    "ignore:.*cgi.*:DeprecationWarning",
    'ignore:.*werkzeug\.urls\.url.*:DeprecationWarning',
    'ignore:.*flask\.Markup.*:DeprecationWarning',
    'ignore:.*pkg_resources.*:DeprecationWarning',
]
# testpaths = ["test_flask", "test_api"]
# disable testing api
testpaths = ["test_flask"]
